syntax = "proto3";

option java_multiple_files = true;

package github.chickenbane.proto;

service QuoteService {
    rpc create(CreateQuoteRequest) returns (CreateQuoteResponse) {}
    rpc findById(FindQuoteByIdRequest) returns (FindQuoteByIdResponse) {}
}

message CreateQuoteRequest {
    string text = 1;
    string author = 2;
}

message CreateQuoteResponse {
    string id = 1;
}

message FindQuoteByIdRequest {
    string id = 1;
}

message FindQuoteByIdResponse {
    string id = 1;
    string text = 2;
    string author = 3;
    string server = 4;
}